Second collection and validation to routes
