# routes/index.js
@@ -8,4 +8,6 @@ router.get("/", (req, res) => (
 
 router.use("/monsters", require("./monsters"));
 
+router.use("/users", require("./users"));
+
 module.exports = router;
